Market picker fixes for improvements - 1.5s delay on input keystroke - AssetActions wrapped inside the component instead relying on parent - Underline on asset pairs - Various cleanups

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -209,6 +209,10 @@ form.order-form {
     }
 }
 
+.underline {
+    border-bottom: 1px dotted;
+}
+
 .final-row > td {
     border-bottom: none !important;
 }
